Revert "sm8250-common: [OplusExtras] Nuke Alert Slider & Touch Screen Gestures"
This reverts commit 809b763f800c7931e9cf1228872fe60818307cab.

--- a/overlay-extras/OPlusExtrasResCommon/res/values/supported_features.xml
+++ b/overlay-extras/OPlusExtrasResCommon/res/values/supported_features.xml
@@ -6,7 +6,7 @@
 <resources>
 
     <!-- Whether device supports Alert Slider -->
-    <bool name="config_deviceSupportsAlertSlider">false</bool>
+    <bool name="config_deviceSupportsAlertSlider">true</bool>
 
     <!-- Whether device supports Per-App Refresh Rate -->
     <bool name="config_deviceSupportsPerAppRefreshRate">true</bool>
@@ -30,7 +30,7 @@
     <bool name="config_deviceSupportsAdrenoBoost">true</bool>
 
     <!-- Whether device supports Touch Screen Gestures -->
-    <bool name="config_deviceSupportsTouchScreenGestures">false</bool>
+    <bool name="config_deviceSupportsTouchScreenGestures">true</bool>
 
     <!-- Whether to show Jitter Test -->
     <bool name="config_deviceSupportsJitterTest">true</bool>
