--- a/overlay/OPlusFrameworksResCommon/res/values/config.xml
+++ b/overlay/OPlusFrameworksResCommon/res/values/config.xml
@@ -911,6 +911,10 @@
          config_defaultPeakRefreshRate will act as the default frame rate. -->
     <integer name="config_defaultRefreshRate">0</integer>
 
+    <!-- If true, the doze component is not started until after the screen has been
+         turned off and the screen off animation has been performed. -->
+     <bool name="config_dozeAfterScreenOff">true</bool>
+
     <!-- Power Management: Specifies whether to decouple the auto-suspend state of the
          device from the display on/off state.
 
